[package]
name = "pathfinder"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1.89"
uuid = { version = "1.19.0", features = ["v4"] }
bitcoin = { version = "0.32.8", features = ["serde"] }
mockito = "1.7.2"
